# monad-cli

./: .env.example  .gitattributes  .gitignore  .monorepo.json  .prototools  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  EPIC_WP_LAYER_MAP.md  GOVERNANCE.md  LICENSE  README.md  RELEASE.md  SECURITY.md  biome.json  clippy.toml.layer0002.bak  codeql-config.yml  compose.yaml  compose.yaml.layer0001.bak  deny.toml  docs.json  engines.registry.json  knip.json  layer-0002-hotfix-0001-cli-no-args-help.sh  layer-0002-hotfix-0002-main-rs-no-args-help.sh  layer-0002-hotfix-0003-main-rs-no-args-default-scope.sh  layer-0002-hotfix-0004-normalize-monad-cli-lib-bin.sh  layer-0002-hotfix-0005-rust-workspace-crates-baseline.sh  layer-0002-hotfix-0006-normalize-workspace-crate-apis.sh  layer-0002-hotfix-0007-restore-core-and-pack-cli-apis.sh  layer-0002-hotfix-0008-dedupe-monad-packs-serde.sh  layer-0002-hotfix-0009-rewrite-monad-packs-cargo-toml.sh  layer-0002-hotfix-0010-align-core-packs-with-cli-contract.sh  layer-0002-hotfix-0011-command-catalog-contract.sh  layer-0002-hotfix-0012-fix-monad-core-inner-doc-order.sh  layer-0002-hotfix-0013-placeholder-command-metadata.sh  (+27 more)
crates/monad-cli/: Cargo.toml  Cargo.toml.layer0002.bak
crates/monad-cli/src/: lib.rs  lib.rs.bak.layer-0002-hotfix-0014  lib.rs.bak.layer-0002-hotfix-0015  lib.rs.bak.layer-0002-hotfix-0016  lib.rs.bak.layer-0002-hotfix-0017  lib.rs.bak.layer-0002-hotfix-0018  lib.rs.bak.layer-0002-hotfix-0019  lib.rs.bak.layer-0002-hotfix-0020  lib.rs.bak.layer-0002-hotfix-0020a  (+8 more)
(+430 files in other folders)
