[package]
name = "monad-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Monad command-line interface."

[[bin]]
name = "monad"
path = "src/main.rs"

[dependencies]
clap.workspace = true
monad-core = { path = "../monad-core" }
monad-packs = { path = "../monad-packs" }
serde.workspace = true
serde_json.workspace = true
monad-plans = { path = "../monad-plans" }
monad-policy = { path = "../monad-policy" }
monad-context = { path = "../monad-context" }
monad-graph = { path = "../monad-graph" }
